# terraform-local-test-adapter

./: .editorconfig  .gitignore  .gitlab-ci.yml  .markdownlint.yml  .pre-commit-config.yaml  .tarball-exclusions  .terraform-docs.yml  .tflint.hcl  CONTRIBUTING.md  Makefile  README.md  main.tf  outputs.tf  package-lock.json  package.json  pyproject.toml  release.config.js  requirements.txt  variables.tf  versions.tf
.github/workflows/: release.yml  test.yml
.gitlab/: CODEOWNERS  renovate.json
.gitlab/merge_request_templates/: default.md
docs/source/: conf.py
examples/jest/: example.spec.js  example.spec.ts  main.tf
examples/k6/: main.tf  script.k6.js
examples/pytest/: main.tf  report.xml  test_example.py
local/: .terraform-docs.yml  README.md  defaults.auto.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
modules/jest/: README.md  main.tf  outputs.tf
modules/k6/: README.md  main.tf  outputs.tf
modules/pytest/: README.md  main.tf  outputs.tf  requirements.txt
tests/: README.md  main.tftest.hcl  test_examples.tftest.hcl
tests/jest_failure/: failed.spec.ts
tests/pytest_failure/: test_example.py
