[tool.poetry]
name = "terraform-x-adapter"
version = "1.0.0"
authors = ["SouthwestAir"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.9",
]
description = "A Terraform module that provides a unified interface for running different test frameworks within Terraform test."
homepage = "https://github.com/SouthwestAir/terraform-x-adapter/"
package-mode = false
readme = "README.md"
repository = "https://github.com/SouthwestAir/terraform-x-adapter/"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.5"
pytest-json-report = "^1.5.0"

[tool.poetry.group.dev.dependencies]
furo = "^2024.1.29"  # Sphinx theme we are using
myst-parser = "^2.0.0"  # markdown support for Sphinx
pre-commit = "^4.1.0"
sphinx = "^7.2.6"
sphinx-autobuild = "^2024.2.4"  # utility that provides automated rebuilding and browser reloading
sphinx-copybutton = "^0.5.2"

[tool.tomlsort]
all = true
in_place = true
sort_first = ["tool", "tool.poetry"]
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
overrides."tool.poetry".first = ["name", "version"]
overrides."tool.poetry.dependencies".first = ["python"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
